--- a/config/currencies.yml.example
+++ b/config/currencies.yml.example
@@ -29,6 +29,7 @@
   code: eth
   symbol: "฿"
   coin: true
+  base_address: YOUR_BASE_ADDRESS
   precision: 4
   quick_withdraw_max: 0
   rpc: http://Your_eth_server_ip
